--- a/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/HotelSolution/Frontend/HotelApp.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -88,6 +88,12 @@
                 </a>
             </li>
             <li>
+                <a href="/AdminSettings/Index" aria-expanded="false">
+                    <i class="fa fa-user-lock"></i
+                    ><span class="nav-text">Kullanıcı İşlemleri</span>
+                </a>
+            </li>
+            <li>
                 <a href="/AdminLogout/Index" aria-expanded="false">
                     <i class="fa fa-cross"></i
                     ><span class="nav-text">Çıkış yap</span>
